--- a/index.html
+++ b/index.html
@@ -58,22 +58,18 @@
   <div class="about-img"><img src="about.jpg" width="80%" height="80%"></div>
   <div class="about-text">
     <h1>About Us</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Alliance of Commerce and Economics is a club at Delhi Public School Dwarka built upon the aim of promoting Economics and Commerce. 
+        Pioneered by Jashan Gupta in the November of 2011, ACE is a legacy carried on each year by a team of commerce enthusiasts.</p>
   </div>
 </div>
 <div class="ace" id="ace" align="center">
   <h1>ACE FEST</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>ACE'17 aims to challenge the students’ acumen and analytical skill set, by yielding an opportunity to connect and create.
+Team ACE invites you to witness high standards of discussions and deliberations with a wide array of events
+      that test knowledge, reason, sense and intellect of the participants. <br>
+The Fest comprises of six unique and challenging events - Can You Master Them All?
+
+Making Commerce Great Again on November 3rd.</p>
 </div>
 <div class="events" id="events" align="center">
 <div class="events" align="center">
@@ -171,7 +167,7 @@
               
 
               <p class="text-intro">Memeonomics is an online event for the proud internet generation, blending economics with memes.<br>
-The participating schools will be sent a topic on which the participants have to make 5 original and creative‘Memes’ or ‘Graphical Jokes’ and <b>send them 1 week prior to the Event</b>. 
+The participating schools will be sent a topic on which the participants have to make 5 original and creative ‘Memes’ or ‘Graphical Jokes’ and <b>send them 1 week prior to the Event</b>. 
 <br>
 The entries should be sent in <b>one</b> email to <b>acedpsdw@gmail.com</b> . The Email Subject should read “Memeonomics – Participants’ School Name” and the Email Body should contain the names of the participants.
 <br>
