--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
    <h1><span class="blues str">A</span>lliance <span class="blues">O</span>f <span class="blues str">C</span>ommerce <span class="blues">a</span>nd <span class="blues str">E</span>conomics</h1>
    <h3 class="blues">The Interschool Commerce fest of Dps Dwarka</h3>
    <a href="#about" class="left-btn">Know More</a>
-   <a href="#invite" class="right-btn">Event Invite</a>
+   <a href="invite.pdf" target = "_blank" class="right-btn">Event Invite</a>
    </div>
 <div class="about" id="about" align="center">
   <div class="about-img"><img src="about.jpg" width="80%" height="80%"></div>
