--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   <p>ACE'17 aims to challenge the students’ acumen and analytical skill set, by yielding an opportunity to connect and create.
 Team ACE invites you to witness high standards of discussions and deliberations with a wide array of events
       that test knowledge, reason, sense and intellect of the participants. <br>
-The Fest comprises of six unique and challenging events -<br><br> Can You Master Them All?
-
+The Fest comprises of six unique and challenging events - Can You Master Them All?
+<br><br>
       <strong>Making Commerce Great Again on November 3rd.</strong></p>
 </div>
 <div class="events" id="events" align="center">
