--- a/index.html
+++ b/index.html
@@ -166,10 +166,14 @@ The Fest comprises of six unique and challenging events - Can You Master Them Al
               <b>Eligibility:</b> Open</p>
               
 
-              <p class="text-intro">Memeonomics is an online event for the proud internet generation, blending economics with memes.<br>
-The participating schools will be sent a topic on which the participants have to make 5 original and creative ‘Memes’ or ‘Graphical Jokes’ and <b>send them 1 week prior to the Event</b>. 
+              <p class="text-intro">Memeonomics is an online event for the proud internet generation,
+                  blending economics with memes.<br>
+The participating schools will be sent a topic on which the participants have to make 5 original and creative ‘Memes’ 
+                  or ‘Graphical Jokes’ and <b>send them 1 week prior to the Event</b>. 
 <br>
-The entries should be sent in <b>one</b> email to <b>acedpsdw@gmail.com</b> . The Email Subject should read “Memeonomics – Participants’ School Name” and the Email Body should contain the names of the participants.
+The entries should be sent in <b>one</b> email to <b>acedpsdw@gmail.com</b> .
+                  The Email Subject should read “Memeonomics – Participants’ School Name” and 
+                  the Email Body should contain the names of the participants.
 <br>
               <span class="quote">
               Vulgar, Offensive or Plagiarized Content will lead to disqualification of the team.</span>
