--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ There is no word limit for the hard copy.<br>
    </div>
     <div class="pellet">
     <h3>Tech Heads</h3>
-    <h5>Tanvish Jha & Tapish Golcha</h5>
+    <h5>Tanvish, Tapish & Rishabh</h5>
    </div>
    <div class="pellet">
     <h3>Hawkeye</h3>
