--- a/index.html
+++ b/index.html
@@ -401,7 +401,8 @@ There is no word limit for the hard copy.<br>
                   For Further Details Contact:
                 </p>
                  <p class="rule">
-             Vedant Madan: +9185278161783</p>
+             Vedant Madan:   +91 85278 16178‬
+</p>
              
               </p>
 <button type="button" class="close" data-dismiss="modal"></button>
